👌 IMPROVE: Added custom JVM arguments to Maven
resolved #27