@@ -57,6 +57,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<arguments>
+						<argument>-XX:+UseZGC</argument>
+						<argument>-Xlog:gc*:file=log/aop-demo.gc.log</argument>
+						<argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
+						<argument>-XX:HeapDumpPath=log/crashes/aop-demo.hprof</argument>
+						<argument>-Xss256k</argument>
+						<argument>-Dsun.net.client.defaultConnectTimeout=2000</argument>
+						<argument>-Dsun.net.client.defaultReadTimeout=2000</argument>
+					</arguments>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
